--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,8 +29,8 @@ body {
 
 .res-container {
     margin: 0 auto;
-    width: 200px;
-    height: 200px;
+    width: 500px;
+    height: 300px;
 }
 
 .button {
@@ -66,7 +66,7 @@ body {
 }
 
 .success-prompt {
-    color: green;
+    color: #07cd07;
 }
 
 .error {
