--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -29,8 +29,9 @@ body {
 
 .res-container {
     margin: 0 auto;
-    width: 500px;
-    height: 300px;
+    img {
+        width: 100%;
+    }
 }
 
 .button {
@@ -90,6 +91,7 @@ body {
             margin-top: 1rem;
         }
         img {
+            width: 100%;
             align-self: center;
             margin: 2rem auto;
         }
